--- a/_config.yml
+++ b/_config.yml
@@ -38,11 +38,12 @@ google_analytics:
 comments: false
 
 # Build settings
-theme: jekyll-whiteglass
+remote_theme: yous/whiteglass
 plugins:
   - jekyll-archives
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
